Add a screenshot test to validate the UI for an open door
Adds Test_WeaponWheel_OpenDoor which takes a screenshot to validate the
UI displayed for an open, unlocked door.

--- a/RelayZero/Config/DefaultEngine.ini
+++ b/RelayZero/Config/DefaultEngine.ini
@@ -66,3 +66,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[AutomationTestExcludelist]
++ExcludeTest=(Map="",Test="Project.Functional Tests.Tests.SecuribotTests.FT_SecuribotTest.Test_SecuribotKillsPlayer",Reason="Test does not exist",RHIs=(),Warn=False)
+
