Update project to use dynamic nav meshes
Updating the navmesh dynamically at runtime allows AI characters to
respond to doors opening and closing.

--- a/RelayZero/Config/DefaultEngine.ini
+++ b/RelayZero/Config/DefaultEngine.ini
@@ -125,3 +125,6 @@ ManualIPAddress=
 [AutomationTestExcludelist]
 +ExcludeTest=(Map="",Test="Project.Functional Tests.Tests.SecuribotTests.FT_SecuribotTest.Test_SecuribotKillsPlayer",Reason="Test does not exist",RHIs=(),Warn=False)
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
