--- a/RelayZero/Config/DefaultEngine.ini
+++ b/RelayZero/Config/DefaultEngine.ini
@@ -66,7 +66,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/FirstPerson/Blueprints/BP_RelayZeroGameInstance.BP_RelayZeroGameInstance_C
 GameDefaultMap=/Game/Levels/HighRise.HighRise
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
