Add a custom BaseCharacter class to change AI pawn behaviour
UE5 does not allow editing of certain variables in AI behaviour via
blueprint. In particular, I needed to be able to make AI perception
target the place where the Securibot mesh is facing, while the default
behaviour snaps to its desired controller direction.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Visual Studio 2015 user specific files
+# Visual Studio user-specific files
 .vs/
+*/.vsconfig
+
+# Rider workspace files
+*/.idea/
 
 # Compiled Object files
 *.slo
